# sdl_ios_test

./: .gitignore  CMakeLists.txt  README.md
res/: Info.plist.in
src/: main.cpp
